--- a/package.json
+++ b/package.json
@@ -10,21 +10,28 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/cli": "^7.16.8",
+        "@babel/core": "^7.16.7",
+        "@babel/preset-env": "^7.16.8",
         "@popperjs/core": "^2.10.2",
-        "@tailwindcss/ui": "^0.3",
-        "autoprefixer": "^9.6",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
-        "laravel-mix": "^6.0.39",
+        "laravel-mix": "^6.0.18",
         "lodash": "^4.17.19",
         "postcss": "^8.4.5",
-        "postcss-import": "^12.0",
-        "postcss-nested": "^4.2",
-        "resolve-url-loader": "^3.1.2",
+        "postcss-import": "^14.0.2",
+        "postcss-nested": "^5.0.6",
+        "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "tailwindcss": "^2.2.19",
         "vue": "^2.6.12",
+        "vue-loader": "^17.0.0",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "babel": "^6.23.0",
+        "uglify": "^0.1.5",
+        "uglify-js": "^3.14.5"
     }
 }
